[package]
name = "fraction64"
version = "0.1.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1.46"
num-traits = "0.2.18"
qol = { version = "0.1.4", git = "https://github.com/DrAlta/rust_quality_of_life.git"}


[features]
trig = []